# py1pass

./: .gitignore  README.rst  find  mypy.ini  pylama.ini  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml  lint.yml  release.yml
docs/: README.rst  index.rst
docs/py1pass/: changelog.rst
py1pass/: errors.py  executor.py
py1pass/config/: __init__.py  _base.py  _register.py  accounts.py
py1pass/data/: __init__.py  _base.py  _categories.py  _item.py  op_type.py
py1pass/executor/: __init__.py  _base.py  _commands.py
py1pass/op/: __init__.py  _cli.py
py1pass/tests/: __init__.py  _fake_cli.py  _op_config_helper.py
tests/: conftest.py  test_account.py
tests/config/: test_account.py  test_config_maker.py  test_op_config.py
tests/executor/: conftest.py  test_get_account.py  test_no_args.py
tests/op/: test_accounts.py  test_create.py
tools/: devtools.py  requirements.dev.txt  venv
